[package]
name = "astro_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
swiss-eph = "0.2.1"  # Required by the original math engine (stubbed in this showcase)
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4.44"
tzf-rs = "1.2.0"
chrono-tz = "0.10.4"
once_cell = "1.21.4"
dialoguer = "0.12.0"
console = "0.16.3"
open = "5.3.3"
rand = "0.8"

[[bin]]
name = "verify_db"
path = "src/verify_db.rs"

[[bin]]
name = "astro_agent"
path = "src/main.rs"
